--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	"devDependencies": {
 		"@commitlint/cli": "^8.3.5",
 		"@commitlint/config-conventional": "^8.3.4",
+		"@types/node": "^13.7.1",
 		"@types/react": "^16.9.19",
 		"husky": "^4.2.3",
 		"lint-staged": "^10.0.7",
