--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "react-runtime-env",
-	"version": "0.0.2-3",
+	"version": "1.0.0",
 	"description": "Zero dependency package for working with runtime environment variables in react",
 	"keywords": [
 		"javascript",
